[package]
name = "bullet3-sys"
version = "0.1.0"
authors = ["Oleg Khryptul <okreptul@yahoo.com>"]
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.36.1"
#cc = { version = "1.0.15", features = ["parallel"] }
cc = { version = "1.0.15" }
walkdir = "2.1.4"

[features]
default = ["bind"]
build = []
bind = []
examples = []
